This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
10/20/20: Fixed MakeNavPointsAtHoles command (In 3.8).

10/18/20: SEM_3-8-3
10/18/20: Fixed problems with builds of shrmemframe and FrameGPU which should
fix GPU problems in multiple contexts; SEMCCD still fails to load FrameGPU in
GMS 3.42, but shrmemframe will load a FrameGPU in the parent plugins directory
and frame alignment can use the GPU under 3.42 through shared memory (In 3.8).

10/16/20: Fixed lack of delay after image shift at end of first round of IS
from Scratch, which caused drift in first image of second round (In 3.8).

10/15/20: Improved detection of lens relaxation completion on JEOL (In 3.8).

10/16/20: Fixed some broken functions in script processors.

10/16/20: Made Realign to Item work with non-centered subarea when staying in
low dose for alignments shots.

10/16/20: Added property to use Trial size for tasks instead of full field.


10/8/20: Fixed taking frames totalling more than with 4 Gpixels with Tietz
burst mode (may work only with GPU version) (In 3.8).

10/7/20: Converted script processor from using huge switch statement to using
functions for commands.

10/5/20: Fixed continuous mode for Tietz cameras with 32-bit EM-Menu (In 3.8).

10/4/20: Fixed names of counting mode movies for newer DE servers (In 3.8).

10/4/20: Enabled display of Low Dose areas on Search images.

10/3/20: Fixed rounding of exposure times when setting up variable frame sums
for K3 and improved behavior of frame summing setup upon changes (In 3.8).

10/2/20: Fixed NormCondenserInLowDose so it happens after changing to the new
intensity (In 3.8).

10/2/20: Fixed drift report from autofocus when there are fewer than 3 rolling
buffers (In 3.8).

9/28/20: SEM_3-8-2