@@ -114,6 +114,7 @@ struct LiveThreadData {
 #define DE_ROI_IS_ON_CHIP       201150000
 #define DE_HAS_ONE_GAIN_STATUS  201000000
 #define DE_NO_COUNTING_PREFIX   201000000
+#define DE_AUTOSAVE_RENAMES1    203000000
 
 //The following define the different
 //gain/dsi setting modes for the LC1100
