@@ -240,6 +240,11 @@
       menu entries.&nbsp; Press that letter to select that item or open a submenu, 
       where more shortcut keys will be underlined.</P>
     <P>&nbsp;</P>
+    <P><strong>F1 for help on menu items and dialog boxes:</strong> Pressing F1 while 
+      the mouse is over a menu item or dialog box will open the help for the given 
+      item.&nbsp; This is the easiest way to open the help for a menu item and it 
+      works regardless of whether the item is enabled.&nbsp; The <strong>? </strong>button in each dialog box does the same thing as F1.</P>
+    <P>&nbsp;</P>
     <P><B>Hot keys:</B></P>
       <TABLE cols="2" BORDER style="Z-INDEX: 0">
         <TBODY>
@@ -328,10 +333,6 @@
           <TR VALIGN="top">
             <TD width="85">Esc</TD>
             <TD>Stop camera acquisition and any running tasks.</TD>
-          </TR>
-          <TR VALIGN="top">
-            <TD width="85">F1</TD>
-            <TD>Open context-sensitive help when the mouse is over a menu item or a dialog box.</TD>
           </TR>
           <TR VALIGN="top">
             <TD width="85">F11</TD>
