@@ -1529,11 +1529,14 @@
         is only good for a limited period of time (1 day by default, but this time can be 
         set with the property 'DoseLifetimeInHours'). The calibration requires 
         that beam intensity be calibrated and that the SerialEMproperties.txt file 
-        contain an entry for CountsPerElectron for the CCD camera. Before activating 
+        contain an entry for CountsPerElectron for the CCD camera. </P>
+    <P>Before activating 
         the command, take an image of the blank beam with a reliable exposure time 
-        (e.g., 0.2 seconds). Select the command and press OK. The program will report 
-        the dose rate (electrons per square Angstroms per second) of the current beam 
-        intensity.</P>
+        (e.g., 0.2 or more seconds) and with the beam in the calibrated range for the 
+      current spot size (the &#39;SPOT&#39; label in the microscope status panel should be 
+      blue). Select the command and press OK. The program will report 
+        the dose rate (electrons per square Angstroms per second) of the beam 
+        intensity at which that image was taken.</P>
       <P>The dose calibration will be most accurate if the spot size is normalized (on 
         an FEI scope). To do this, open the Normalizations panel in the Microscope User 
         Interface, select TEM Spotsize, and check Spotsize. Then change spot size to 
